SOIR-26: ajout du header dans index

--- a/about-us.html
+++ b/about-us.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>About us</title>
+<meta charset="utf-8">
+<title>About us</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
 <body>
-  ...
-  <!-- Le reste du contenu -->
-  ...
+  <h1>...
+    <!-- Le reste du contenu -->
+  ... Bien venue sur le site 
+  </h1>
 </body>
 </html>
