--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Index
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>About us</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+<body>
+<header>
+  <h1>...
+    <!-- Le reste du contenu -->
+  ... Welcomme to my site web </h1>
+  </header>
+  <p>&nbsp; </p>
+</body>
+</html>
